# WRF-infra

./: .gitignore  AUTHORS  README.md  get_ERA5_levels.py  get_FNL.py  jobscript_real.sh  pyproject.toml  requirements.yml  setup.cfg
.github/workflows/: quality-controls_python.yml  ruff.yaml  spaces.yaml  unit-tests-bash-commons.yaml
LICENSES/: Apache-2.0  BSD-3-Clause
compile/: commons.py  compile_WPS.py  compile_WRF.md  compile_WRF.py  install_env.py
compile/patches/WPS/v3.5.1/: compile.job.patch  configure.patch
compile/patches/WPS/v3.5.1/arch/: configure.defaults.patch
compile/patches/WPS/v3.5.1/ungrib/src/: Makefile.patch
compile/patches/WPS/v4.6.0/: README.md  configure.patch
compile/patches/WRF/v3.5.1_GMD-10-3661-2017/arch/: configure_new.defaults.patch
compile/patches/WRF/v3.5.1_GMD-10-3661-2017/chem/KPP/util/wkc/: Makefile.patch
compile/patches/WRF/v3.5.1_GMD-10-3661-2017/chem/KPP/util/write_decomp/: Makefile.patch
compile/patches/WRF/v3.5.1_GMD-10-3661-2017/frame/: Makefile.patch
compile/patches/WRF/v3.5.1_GMD-10-3661-2017/phys/: module_mp_morr_two_moment.F.patch
compile/patches/WRF/v3.5.1_GMD-10-3661-2017/tools/: Makefile.patch
compile/patches/WRF/v3.5.1_PNNL_LM_arctic_GMD/: compile.job.patch
compile/patches/WRF/v3.5.1_PNNL_LM_arctic_GMD/chem/KPP/kpp/kpp-2.1/src/: Makefile.patch
compile/patches_WPS/: README.md  configure.patch
data/: README.md  get-chlorophyll-data-from-copernicus-marine.py
doc/: wrfchem-repro-file-checklist.md
doc/style-guides/: bash.md
doc/tutorials/: 01-install-wrf-chem-polar.md  03-run-wrf-chem-polar.md  add-module-to-WRF-Chem.md
env/: spirit.sh
postprocess/: README.md  wrfpp.py
pre-process/: README.md  get_ERA5_surface.py  get_FINN.py  get_chlorophyll_CMEMS.py
run/: .env  commons.bash  simulation.config  test_commons.bash
run/WPS/: add_chloroa_wps.py  add_dmsocean_wps.py  jobscript_wps.sh  namelist.wps.YYYY
run/WRF-Chem/: jobscript_wrfchem.sh  namelist.input.YYYY
run/real/: cams2wrfchem.py  cesmbc_mozartmosaic4bin.inp  exo_coldens.inp  fire_emis_mozartmosaic.inp  jobscript_real.sh  megan_bioemiss.inp  namelist.input.YYYY  wesely.inp
