[project]

requires-python = ">= 3.13"
dependencies = [
    "gfortran",
    "openmpi",
    "netcdf-fortran",
]

[project.optional-dependencies]

preprocess = [
    "pyproj",
    "netcdf4",
    "xarray",
    "shapely",
]
wrfpp = [
    "pyproj",
    "netcdf4",
    "xarray",
    "cartopy",
]
dev = [
    "ruff"
]

[tool.black]

line-length = 79

[tool.ruff]

line-length = 79
